# miguel_angel

./: ADR-001-tech-stack.md  ADR-002-backend-review.md  ADR-003-db-review.md  ADR-005-rag-review.md  ADR-007-symbol-miguelbot-review.md  ADR-008-packaging-review.md  ADR-009-docs-review.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  build_deb.sh  canvas.py  ci.yml  core.md  docs.yml  embeddings.py  forumbot_respond.py  forumbot_respond.yml  index.md  ingest.py  library_db.py  library_models.py  mainwindow.py  miguel_angel.spec  mkdocs.yml  notarise_mac.sh  panels.py  profile.py  pyproject.toml  quickstart.md  rag.py  release.yml  requirements.txt  run.py  security.md  service.py  store.py  symbol_item.py  (+5 more)
